@startuml
hide circle
hide methods
allow_mixing

'skinparam monochrome false
'skinparam packageStyle rectangle
'skinparam shadowing false
'skinparam linetype ortho

' Title
title Domain Model


skinparam classAttributeIconSize 0

skinparam class {
    LifeLineBorderColor DodgerBlue
    LifeLineBackgroundColor APPLICATION
    BackgroundColor LemonChiffon
    ArrowColor Brown
    BorderColor SaddleBrown
}

skinparam packageStyle rectangle

skinparam card {
    LifeLineBorderColor DodgerBlue
    LifeLineBackgroundColor APPLICATION
    BackgroundColor LemonChiffon
    ArrowColor Brown
    BorderColor SaddleBrown
}


' Aggregates

package "User Aggregate" {

    entity User <<entity>><<root>> {
    }

    card Username <<Value Object>>
    card Email <<Value Object>>

    enum Role <<enumeration>> {
        Admin
        Doctor
        Nurse
        Technician
        Patient
    }

    ' Relationships inside the User aggregate

    User "1" -u-> "1" Username
    User "1" -u-> "1" Email
    User "1" -u-> "1" Role


}

note top of "User Aggregate" : This logic is abstracted by the backend and is implemented in the IAM process


package "Patient Aggregate" {

    entity Patient <<entity>><<root>> {
    }

    card PatientFirstName <<Value Object>>
    card PatientLastName <<Value Object>>
    card PatientFullName <<Value Object>>
    card DateOfBirth <<Value Object>>
    enum Gender <<enumeration>> {
        Male
        Female
    }

    card MedicalRecordNumber <<Value Object>>
    card AllergiesAndConditions <<Value Object>>
    card EmergencyContact <<Value Object>>
    card AppointmentHistory <<Value Object>>
    'card AppointmentHistory <<Value Object>>

    ' Atributos Contact Information
    card PatientEmail <<Value Object>>
    card PhoneNumber <<Value Object>>

    ' Atributos Appointment History
    card AppointmentId <<Value Object>>

    ' Relationships Appointment History
    AppointmentHistory "1" --> "*" AppointmentId 


    ' Relationships inside the Patient aggregate
    Patient "1" -u-> "1" PatientFirstName
    Patient "1" -u-> "1" PatientLastName
    Patient "1" -u-> "1" PatientFullName
    Patient "1" -u-> "1" DateOfBirth
    Patient "1" -u-> "1" Gender
    Patient "1" --> "1" MedicalRecordNumber
    Patient "1" --> "*" AllergiesAndConditions
    Patient "1" --> "1" EmergencyContact
    Patient "1" --> "1" AppointmentHistory
    Patient "1" --> "1" PatientEmail
    Patient "1" --> "1" PhoneNumber

}

' Relationships

User "1" -u-> "0..*" Patient

@enduml
